--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!-- All Songs Div -->
       <div class="all-song-div">
         <!-- change  class name sidebar => all-songs-div -->
-        <p>Filter by Genre:</p>
+        <p>Filter by Genre</p>
         <select id="genreFilter">
           <!-- <option value="all">All</option>
           <option value="pop">Pop</option>
